# sandbox

./: .bedrock_agentcore.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml  ruff.toml  websocket_client.py  websocket_client_test.py
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
client/: websocket_client.py
docs/: message-flow.md  microvm-lifecycle.md  session-persistence.md
scripts/: export.py  import.py
scripts/schema/: openapi.json
src/: main.py  message.py  tools.py
test/: websocket_client_test.py
