[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.1.1",
    "bedrock-agentcore-starter-toolkit>=0.2.5",
    "claude-agent-sdk>=0.1.18",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "ty>=0.0.5",
]
